--- a/packages/mgt-components/src/styles/theme.scss
+++ b/packages/mgt-components/src/styles/theme.scss
@@ -2,3 +2,4 @@
 @import '../components/mgt-teams-channel-picker/mgt-teams-channel-picker.theme.scss';
 @import '../components/mgt-login/mgt-login.theme.scss';
 @import '../components/mgt-agenda/mgt-agenda.theme.scss';
+@import '../components/mgt-person/mgt-person.theme.scss';
