--- a/packages/mgt-components/src/styles/theme.scss
+++ b/packages/mgt-components/src/styles/theme.scss
@@ -3,3 +3,5 @@
 @import '../components/mgt-login/mgt-login.theme.scss';
 @import '../components/mgt-agenda/mgt-agenda.theme.scss';
 @import '../components/mgt-person/mgt-person.theme.scss';
+@import '../components/mgt-person-card/mgt-person-card.theme.scss';
+@import '../components/mgt-people/mgt-people.theme.scss';
