Add theme for mgt-tasks

--- a/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
+++ b/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.scss
@@ -7,8 +7,9 @@
 
 @import '../../styles/shared-styles.scss';
 @import '../../../../../node_modules/office-ui-fabric-core/dist/sass/References';
+@import './mgt-tasks-base.theme.scss';
 
-$tasks-background-color: var(--tasks-background-color, #f8f8f8);
+// $tasks-background-color: var(--tasks-background-color, #f8f8f8);
 
 $task-icon-alignment: var(--task-icon-alignment, flex-start);
 $task-icon-background: var(--task-icon-background, transparent);
@@ -16,15 +17,17 @@ $task-icon-background-completed: var(--task-icon-background-completed, $ms-color
 $task-icon-border: var(--task-icon-border, solid 1px $ms-color-gray120);
 $task-icon-border-completed: var(--task-icon-border-completed, solid 1px white);
 $task-icon-border-radius: var(--task-icon-border-radius, 50%);
-$task-icon-color: var(--task-icon-color, black);
+// $task-icon-color: var(--task-icon-color, black);
 $task-icon-color-completed: var(--task-icon-color-completed, white);
+$task-border-completed: var(--task-complete-border, 2px dotted inherit);
 
 :host {
   font-family: var(--default-font-family, 'Segoe UI');
   display: flex;
   flex-direction: column;
-  background-color: $tasks-background-color;
+  background-color: set-var(background-color__sub1, $theme-default, $common);
   padding: var(--tasks-padding, 12px);
+  color: set-var(color, $theme-default, $common);
 
   .TaskIcon {
     font-family: 'FabricMDL2Icons';
@@ -39,7 +42,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
     }
   }
 
-  .header {
+  .Header {
     padding: var(--tasks-header-padding, 0);
     margin: var(--tasks-header-margin, 0 0 12px 0);
 
@@ -88,6 +91,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
 
       input {
         flex: 1 1 auto;
+        background-color: set-var(background-color__sub1, $theme-default, $common);
       }
     }
 
@@ -148,7 +152,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
     position: relative;
     margin: var(--task-margin, 0 0 18px 0);
     padding: var(--task-padding, 0 0 0 0);
-    background-color: var(--task-background, white);
+    background-color: set-var(background-color, $theme-default, $tasks);
 
     .TaskContent {
       display: flex;
@@ -159,7 +163,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: $ms-color-gray30;
+        background-color: set-var(background-color__sub1, $theme-default, $common);
       }
 
       .TaskDetailsContainer {
@@ -173,7 +177,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
         justify-content: space-between;
         align-items: flex-start;
 
-        color: var(--task-detail-color, $ms-color-gray130);
+        color: set-var(detail__color, $theme-default, $tasks);
         font-size: 12px;
         font-weight: 600;
         white-space: nowrap;
@@ -346,6 +350,10 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
         svg {
           vertical-align: middle;
           margin-right: 4px;
+
+          path {
+            fill: set-var(detail__color, $theme-default, $tasks);
+          }
         }
         span,
         select {
@@ -357,7 +365,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
           margin-right: 8px;
         }
         mgt-people {
-          color: var(--task-detail-color, black);
+          color: set-var(detail__color, $theme-default, $tasks);
           font-size: 16px;
         }
 
@@ -365,12 +373,12 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
           display: inline-block;
         }
         .Picker {
-          background-color: white;
+          background-color: set-var(background-color__sub1, $theme-default, $common);
           -webkit-background-clip: padding-box;
           -moz-background-clip: padding-box;
           background-clip: padding-box;
           width: var(--mgt-flyout-set-width, 350px);
-          color: var(--task-detail-color, black);
+          color: set-var(detail__color, $theme-default, $tasks);
           mgt-people-picker {
             --separator-margin: 0px 10px 0px 10px;
           }
@@ -378,8 +386,9 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
 
         input,
         select {
-          color: var(--task-detail-color, #767676);
+          color: set-var(detail__color, $theme-default, $tasks);
           font-size: 0.9em;
+          background-color: set-var(background-color__sub1, $theme-default, $common);
         }
       }
     }
@@ -404,6 +413,10 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
           border: $task-icon-border-completed;
           color: $task-icon-color-completed;
         }
+
+        .TaskTitle {
+          text-decoration: line-through;
+        }
       }
 
       .TaskCheck {
@@ -414,7 +427,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
         height: 18px;
         border-radius: $task-icon-border-radius;
         border: $task-icon-border;
-        color: $task-icon-color;
+        color: set-var(icon__color, $theme-default, $tasks);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -444,8 +457,12 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
     }
 
     &.Complete {
-      background: var(--task-complete-background, $ms-color-gray30);
-      border: var(--task-complete-border, inherit);
+      background: set-var(background-color--completed, $theme-default, $tasks);
+      border: set-var(border--completed, $theme-default, $tasks);
+
+      .TaskTitle {
+        text-decoration: line-through;
+      }
     }
 
     &.NewTask {
@@ -505,6 +522,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
               border-bottom: 1px solid $ms-color-gray40;
               outline: none;
               border-radius: 0;
+              background-color: set-var(background-color__sub1, $theme-default, $common);
             }
 
             input:hover {
@@ -602,7 +620,7 @@ $task-icon-color-completed: var(--task-icon-color-completed, white);
           font-family: var(--default-font-family, 'Segoe UI');
           font-size: 14px;
           font-weight: 600;
-          color: var(--task-new-cancel-button-color, $ms-color-gray210);
+          color: set-var(button__color--cancle, $theme-default, $tasks);
           margin: 0 12px 0 32px;
         }
 
