--- a/packages/mgt-components/src/styles/theme.scss
+++ b/packages/mgt-components/src/styles/theme.scss
@@ -5,3 +5,5 @@
 @import '../components/mgt-person/mgt-person.theme.scss';
 @import '../components/mgt-person-card/mgt-person-card.theme.scss';
 @import '../components/mgt-people/mgt-people.theme.scss';
+
+@import '../components/mgt-tasks-base/mgt-tasks-base.theme.scss';
