--- a/packages/mgt-components/src/styles/shared-styles.scss
+++ b/packages/mgt-components/src/styles/shared-styles.scss
@@ -90,12 +90,14 @@ $green: #6bb700; /* Person / Available */
 $background-color__main--light: $white;
 $background-color__sub1--light: $gray10;
 $background-color__sub2--light: $gray20;
+$background-color__sub3--light: $gray40;
 $background-color__main--hover--light: $gray20;
 $background-color__main--active--light: $gray30;
 // dark
 $background-color__main--dark: $black;
 $background-color__sub1--dark: $gray210;
 $background-color__sub2--dark: $gray140;
+$background-color__sub3--dark: $gray120;
 $background-color__main--hover--dark: $gray160;
 $background-color__main--active--dark: $gray140;
 
@@ -206,6 +208,8 @@ $link__color--hover--light: $commblue_primary;
 $link__color--pressed--light: $black;
 $link__color--disabled--light: $gray90;
 
+$font-family: var(--default-font-family);
+
 /* ---------------Common theming vars / functions / mixins--------------- */
 $themes: ('light', 'dark');
 $theme-default: 'light';
@@ -215,6 +219,31 @@ $common: (
     _var: --color,
     dark: $text__color__main--dark,
     light: $text__color__main--light
+  ),
+  background-color: (
+    _var: --background-color,
+    dark: $background-color__main--dark,
+    light: $background-color__main--light
+  ),
+  background-color--hover: (
+    _var: --background-color--hover,
+    dark: $background-color__main--hover--dark,
+    light: $background-color__main--hover--light
+  ),
+  background-color--active: (
+    _var: --background-color--active,
+    dark: $background-color__main--active--dark,
+    light: $background-color__main--active--light
+  ),
+  background-color__sub1: (
+    _var: --background-color,
+    dark: $background-color__sub1--dark,
+    light: $background-color__sub1--light
+  ),
+  box-shadow: (
+    _var: --box-shadow,
+    dark: rgba(0, 0, 0, 1),
+    light: rgba(0, 0, 0, 0.092)
   )
 );
 
