Person card 2.0 updates (continued) (#774)
* added additional details template, graph fixes

* added message text box visibility to config

* work in progress

* organization functional

* updated files, messages, contacts

* fixed scrolling

* working profile, fixed layout, made sure card is always visible, and more

* Added Providers.me

* cleanup

* Fixed contact and groups in person card

* added license

* Added getScopes

* finished merge

* Added story

* Fixed issues with sections rendering when there is no data

--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-contact/mgt-person-card-contact.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-contact/mgt-person-card-contact.scss
@@ -74,16 +74,23 @@
       .part__copy {
         width: 32px;
         height: 100%;
-        background-color: #e1dfdd;
         visibility: hidden;
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #e1dfdd;
+        }
+
+        &:active {
+          background-color: #f3f2f1;
+        }
       }
 
       &:hover {
         background-color: #f3f2f1;
-        cursor: pointer;
 
         .part__copy {
           visibility: visible;
@@ -95,20 +102,8 @@
       padding: 0;
 
       .part {
-        display: flex;
-
-        &:not(:last-child) {
-          margin-bottom: 8px;
-        }
-
-        &:hover {
-          background-color: initial;
-          cursor: initial;
-
-          .part__copy {
-            visibility: hidden;
-          }
-        }
+        height: 30px;
+        align-items: center;
       }
 
       .part__details {
