--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -28,11 +28,14 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
   user-select: none;
 
   .nav {
-    display: flex;
+    height: 0px;
+    position: relative;
+    z-index: 100;
 
     .nav__back {
-      padding: 10px;
-      display: flex;
+      padding: 8px;
+      height: 32px;
+      width: 32px;
       align-items: center;
       justify-content: center;
 
@@ -53,8 +56,8 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
   .person-details-container {
     display: flex;
     flex-direction: column;
-    width: calc(var(--mgt-flyout-set-width, 340px) - 30px);
-    padding: 15px 15px 20px 15px;
+    width: calc(var(--mgt-flyout-set-width, 340px) - 40px);
+    padding: 20px;
 
     .person-image {
       --presence-background-color: var(--person-card-background-color, #ffffff);
@@ -72,8 +75,8 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       -webkit-align-items: center;
       align-items: center;
       max-width: 120px;
-      margin-left: 87px;
-      margin-top: 4px;
+      // margin-left: 87px;
+      margin-top: 16px;
 
       .icon {
         display: flex;
@@ -212,8 +215,16 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
     }
   }
 
+  .loading {
+    margin: 40px 20px;
+    display: flex;
+    justify-content: center;
+    height: 360px;
+  }
+
   .section-host {
-    max-height: 600px;
+    max-height: 360px;
+    min-height: 360px;
     overflow-y: auto;
     overflow-x: hidden;
   }
@@ -221,8 +232,7 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
   .quick-message {
     display: flex;
     flex-direction: row;
-    padding: 8px 10px;
-    border-bottom: 1px solid #e8e8e8;
+    padding: 12px 10px 8px 10px;
 
     .quick-message__input {
       flex-grow: 1;
@@ -261,8 +271,14 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
       flex-direction: column;
       position: relative;
 
-      &:not(:last-child) {
+      &:not(:last-child):after {
+        position: absolute;
+        content: '';
+        width: 90%;
+        transform: translateX(-50%);
         border-bottom: 1px solid #eaeaea;
+        left: 50%;
+        bottom: 0;
       }
 
       .section__header {
@@ -292,6 +308,10 @@ $person-card-background-color: var(--person-card-background-color, #ffffff);
 
       .section__content {
         margin-top: 14px;
+      }
+
+      .additional-details {
+        padding: 0 20px;
       }
     }
   }
