--- a/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
+++ b/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
@@ -23,6 +23,7 @@
       animation-duration: 0.3s;
       animation-timing-function: cubic-bezier(0.1, 0.9, 0.2, 1);
       animation-fill-mode: both;
+      transition: top 0.3s ease, bottom 0.3s ease, left 0.3s ease;
     }
   }
 }
