--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-contact/mgt-person-card-contact.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-contact/mgt-person-card-contact.scss
@@ -6,6 +6,7 @@
  */
 
 @import '../base-person-card-section.scss';
+@import '../../../../styles/shared-styles.scss';
 
 :host {
   position: relative;
@@ -17,7 +18,7 @@
     .title {
       font-size: 14px;
       font-weight: 600;
-      color: #323130;
+      color: set-var(title__color__subtitle, $theme-default, $common);
       margin: 0 20px 12px 20px;
     }
 
@@ -43,19 +44,19 @@
 
         .part__title {
           font-size: 12px;
-          color: #797775;
+          color: set-var(title__color__sub2, $theme-default, $common);
           line-height: 20px;
         }
 
         .part__value {
           grid-column: 2;
-          color: #333333;
+          color: set-var(color__sub1, $theme-default, $common);
           font-size: 14px;
           font-weight: 400;
 
           .part__link {
-            color: #0078d4;
-            font-family: var(--default-font-family);
+            color: $commblue_primary;
+            font-family: $font-family;
             font-size: 14px;
             cursor: pointer;
             text-overflow: ellipsis;
@@ -74,15 +75,19 @@
       .part__copy {
         width: 32px;
         height: 100%;
-        background-color: #e1dfdd;
+        background-color: set-var(background-color__sub2, $theme-default, $common);
         visibility: hidden;
         display: flex;
         align-items: center;
         justify-content: center;
+
+        svg {
+          fill: set-var(color__sub1, $theme-default, $common);
+        }
       }
 
       &:hover {
-        background-color: #f3f2f1;
+        background-color: set-var(background-color--hover, $theme-default, $common);
         cursor: pointer;
 
         .part__copy {
