--- a/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.theme.scss
+++ b/packages/mgt-components/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.theme.scss
@@ -58,7 +58,7 @@ $channel-picker: (
   ),
   dropdown-item__background-color--selected: (
     _var: --dropdown-item-selected-background,
-    dark: #deecf9,
+    dark: #333d47,
     light: #deecf9
   ),
   placeholder__color: (
